--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="content">
       <div class="title">Fullscreen Overlay Navigation Bar</div>
-     <p>(Hamburger Menu-2)</p>
+     <p>(Made by shreyash Menu-2)</p>
     </div>
    
 
